--- a/profession.html
+++ b/profession.html
@@ -471,7 +471,7 @@
 			<div class="content content1 wow fadeInLeft ani-time2">
 				<div class="my-column-center">
 					<div class="cont1">
-						<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/campus">
+						<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/campus" target="_blank">
 							<span class="my-bg-color2">校园招聘</span>
 						</a>
 					</div>
@@ -486,7 +486,7 @@
 			<div class="content content2  wow fadeInRight ani-time2">
 				<div class="my-column-center">
 					<div class="cont1">
-						<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/social">
+						<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/social" target="_blank">
 							<span class="my-bg-color2">社会招聘</span>
 						</a>
 					</div>
