--- a/technology.html
+++ b/technology.html
@@ -473,10 +473,10 @@
 					<div class="item-box animated" data-my-animate="fadeInUp100">
 						<div class="content content1 text-box">
 							<div class="cont1 text-color1">舒适模块</div>
-							<div class="cont2">搭在按摩、腰托、腿托、按摩、通风，根据身体情况自由调节，打造极致舒适。</div>
+							<div class="cont2">搭载按摩、腰托、腿托、通风，根据身体情况自由调节，打造极致舒适。</div>
 						</div>
 						<div class="content content2">
-								<img src="images/technology/3-3.jpg">
+								<img src="images/technology/touqi.gif">
 							</div>
 						<div class="content content3"></div>
 					</div>
