--- a/common/footer.html
+++ b/common/footer.html
@@ -90,14 +90,14 @@
 						<div class="logo">
 							<div class="logo-lable">友情链接：</div>
 							<!-- <a href="#"><img src="images/logo.png" alt="" /></a> -->
-							<a href="https://www.adient.com"><img src="images/logo1.png" alt="" /></a>	
-							<a href="https://www.yanfengadient.com/"><img src="images/logo2.png" alt="" /></a>	
+							<a href="https://www.adient.com"  target="_blank"><img src="images/logo1.png" alt="" /></a>	
+							<a href="https://www.yanfengadient.com/"  target="_blank"><img src="images/logo2.png" alt="" /></a>	
 						</div>
 						<div class="footer-right">
 							<div class="copyright">© 2018 Adient plc. All Rights Reserved
 								2016年10月31日，Adient plc(“Adient”)完成了与Johnson Controls International plc(“Johnson Controls”)的分离，现在是一个独立的公开贸易公司。而不是约翰逊的管理者，负责这项业务的运作，包括这个网站。
 							</div>
-							<div class="clause"><a href="http://www.miitbeian.gov.cn" style="font-size:12px">渝ICP备18007434号-1</a></div>
+							<div class="clause"><a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size:12px">渝ICP备18007434号-1</a></div>
 						</div>
 					</div>
 					
