--- a/technology.html
+++ b/technology.html
@@ -182,7 +182,8 @@
 .slide3 .column-5 .item-box{
 	display: flex;
     width: 19.9%;
-    flex-direction: column;
+	flex-direction: column;
+	height: 100%;
 }
 .slide3 .content1,
 .slide3 .content3{
