--- a/product.html
+++ b/product.html
@@ -129,7 +129,7 @@
 			<div class="swiper-slide slide1 slide-zy">
 				<img class="slide-bg" src="images/background/bg-2-2.jpg">
 				<div class="content">
-					<img class="zy-img" src="images/index/3.png">
+					<!-- <img class="zy-img" src="images/index/3.png">
 					<div class="content-box">
 						<div class="point point1">
 							<div class="point-text">整椅</div>
@@ -148,6 +148,41 @@
 								<div class="point-text">泡沫</div>
 							<img src="images/icons/point.png">
 							
+						</div>
+					</div> -->
+					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
+					<div class="content-box">
+						<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
+							<div class="point-text">整椅</div>
+							<img src="images/icons/point.png">
+							<div class="line">
+								<span class="small-point"></span>
+								<span>></span>
+							</div>
+						</div>
+						<div class="point point2 animated ani-time3" data-my-animate="fadeInLeft">
+							<div class="point-text">面套</div>
+							<img src="images/icons/point.png">
+							<div class="line">
+									<span class="small-point"></span>
+									<span>></span>
+								</div>
+						</div>
+						<div class="point point3 animated ani-time3" data-my-animate="fadeInRight">
+							<div class="line">
+								<span><</span>
+								<span class="small-point"></span>
+							</div>
+							<img src="images/icons/point.png">
+							<div class="point-text">骨架</div>
+						</div>
+						<div class="point point4 animated ani-time2" data-my-animate="fadeInRight">
+							<div class="line">
+								<span><</span>
+								<span class="small-point"></span>
+							</div>
+							<img src="images/icons/point.png">
+							<div class="point-text">泡沫</div>
 						</div>
 					</div>
 				</div>
