--- a/m/index.html
+++ b/m/index.html
@@ -73,6 +73,9 @@
     top: 70px;
     left: 50px;
 }
+#index .china-map .region-list{
+	display: none;
+}
 </style>
 </head>
 
@@ -89,7 +92,7 @@
 	
 	<section class="section1">
 		<img src="images/index/1-1.jpg" />
-		<div class="content-box animated" data-my-animate="fadeInLeft">
+		<div class="content-box wow fadeInLeft">
 			<div class="content text-center">
 				<div class="my-color2 font1">
 					<div>提升</div>
@@ -131,9 +134,9 @@
 	</section>
 	<section class="section4">
 		<img src="images/index/4-1.jpg" />
-		<div class="content my-color5 font1">
-			<div style="text-align: left"><div class="animated" data-my-animate="fadeInLeft">超级座椅</div>
-				<div class="animated ani-time2" data-my-animate="fadeInLeft" style="font-weight:600">面向未来的座椅</div>
+		<div class="content my-color5 font1 wow fadeInLeft">
+			<div style="text-align: left"><div class="animated">超级座椅</div>
+				<div class="animated ani-time2" style="font-weight:600">面向未来的座椅</div>
 			</div>
 		</div>
 	</section>
@@ -141,73 +144,73 @@
 		<img src="images/index/5-1.jpg" />
 		<div class="china-map">
 			<img class="img-map" src="images/icons/map_black_bg.png" />
-			<div class="region-list active postition-1 online-node" data-type="成都延锋安道拓汽车部件系统有限公司" data-img="images/about/cd.png">
+			<div class="region-list active postition-1 online-node" data-type="成都延锋安道拓汽车部件系统有限公司"  data-num="9" data-img="images/about/cd.png">
 				<div class="area-box">
 					<span class="dot"><img src="images/icons/marker1.png"></span>
 				</div>
 				<div class="show-regin"><span>成都</span></div>
 			</div>
-			<div class="region-list color1 active postition-2 online-node" data-type="重庆延锋安道拓汽车部件系统有限公司" data-img="images/about/cq-yf.png">
+			<div class="region-list color1 active postition-2 online-node" data-type="重庆延锋安道拓汽车部件系统有限公司"  data-num="1" data-img="images/about/cq-yf.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker2.png"></span>
 				</div>
 				<div class="show-regin allRegin"><span>重庆</span></div>
 			</div>
-			<div class="region-list color1 postition-2-1 online-node" data-type="重庆延锋安道拓汽车部件系统有限公司江津分公司" data-img="images/about/cq-jj.png">
+			<div class="region-list color1 postition-2-1 online-node" data-type="重庆延锋安道拓汽车部件系统有限公司江津分公司"  data-num="6" data-img="images/about/cq-jj.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 				</div>
 				<div class="show-regin"></div>
 			</div>
-			<div class="region-list color1 postition-2-2 online-node" data-type="重庆延锋安道拓锋奥汽车部件系统有限公司" data-img="images/about/cq-fa.png">
+			<div class="region-list color1 postition-2-2 online-node" data-type="重庆延锋安道拓锋奥汽车部件系统有限公司"  data-num="7" data-img="images/about/cq-fa.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 				</div>
 				<div class="show-regin"></div>
 			</div>
-			<div class="region-list active postition-3 online-node" data-type="南昌延锋安道拓汽车部件系统有限公司" data-img="images/about/nc.png">
+			<div class="region-list active postition-3 online-node" data-type="南昌延锋安道拓汽车部件系统有限公司"  data-num="5" data-img="images/about/nc.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 				</div>
 				<div class="show-regin"><span>南昌</span></div>
 			</div>
-			<div class="region-list waite postition-4 waite-node" data-type="重庆延锋安道拓汽车部件系统有限公司东莞分公司" data-img="images/about/dg.png">
+			<div class="region-list waite postition-4 waite-node" data-type="重庆延锋安道拓汽车部件系统有限公司东莞分公司"  data-num="3" data-img="images/about/dg.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 					</div>
 				<div class="show-regin"><span>东莞</span></div>
 			</div>
-			<div class="region-list waite postition-5 waite-node" data-type="台州延锋安道拓汽车部件系统有限公司" data-img="images/about/tz.png">
+			<div class="region-list waite postition-5 waite-node" data-type="台州延锋安道拓汽车部件系统有限公司"  data-num="11" data-img="images/about/tz.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 					</div>
 				<div class="show-regin"><span>台州</span></div>
 			</div>
-				<div class="region-list active postition-6 online-node" data-type="杭州延锋安道拓汽车部件系统有限公司" data-img="images/about/hz.png">
+				<div class="region-list active postition-6 online-node" data-type="杭州延锋安道拓汽车部件系统有限公司"  data-num="4" data-img="images/about/hz.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
 				<div class="show-regin"><span>杭州</span></div>
 			</div>
-			<div class="region-list active postition-7 online-node" data-type="哈尔滨延锋安道拓汽车部件系统有限公司" data-img="images/about/heb.png">
+			<div class="region-list active postition-7 online-node" data-type="哈尔滨延锋安道拓汽车部件系统有限公司"  data-num="8" data-img="images/about/heb.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
 				<div class="show-regin"><span>哈尔滨</span></div>
 			</div>
-			<div class="region-list  active  postition-8 online-node" data-type="大庆延锋安道拓汽车部件系统有限公司" data-img="images/about/dq.png">
+			<div class="region-list  active  postition-8 online-node" data-type="大庆延锋安道拓汽车部件系统有限公司"  data-num="2" data-img="images/about/dq.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
 				<div class="show-regin"><span>大庆</span></div>
 			</div>
-			<div class="region-list  active  postition-9 online-node" data-type="湘潭延锋安道拓汽车部件系统有限公司" data-img="images/about/xt.png">
+			<div class="region-list  active  postition-9 online-node" data-type="湘潭延锋安道拓汽车部件系统有限公司"  data-num="10" data-img="images/about/xt.png">
 				<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
 				<div class="show-regin"><span>湘潭</span></div>
 			</div>
 		</div>
-		<div class="content my-color1">
+		<div class="content my-color1 wow fadeInLeft">
 			<div class="cont1 my-color2 font1">业务概况</div>
 			<div class="cont2 count-box inner">
-				<span class="count-text mytimer my-color2 my-font7" data-speed="6000" data-stop="4300" >4300</span><span class="my-color2 my-font7">+</span>
+				<span class="count-text mytimer my-color2 my-font7" data-speed="6000" data-stop="4300" >0</span><span class="my-color2 my-font7">+</span>
 				<span class="space">名</span>
 				<span class="counter-title">员工人数</span>
 			</div>
 			<div class="cont3 count-box inner">
-				<span class="count-text mytimer my-color2 my-font7" data-speed="8000" data-stop="50" >50</span>
+				<span class="count-text mytimer my-color2 my-font7" data-speed="8000" data-stop="50" >0</span>
 				<span class="space">亿元</span>
 				<span class="counter-title" >2018年销售额</span>
 			</div>
 			<div class="cont4 count-box inner">
-				<span class="count-text mytimer my-color2 my-font7" data-speed="6000" data-stop="11" >11</span>
+				<span class="count-text mytimer my-color2 my-font7" data-speed="6000" data-stop="11" >0</span>
 				<sapn class="space">家</sapn>
 				<span class="counter-title">全国工厂</span>
 			</div>
@@ -217,17 +220,17 @@
 		<div class="content1">
 			<img src="images/index/6-1.jpg" />
 			<div class="my-all-center font1">
-				<div class="my-color1">幸福</div>
-				<div class="my-color2">是奋斗出来的</div>
+				<div class="my-color1 wow fadeInLeft">幸福</div>
+				<div class="my-color2 wow fadeInLeft">是奋斗出来的</div>
 			</div>
 		</div>
 		<img src="images/index/6-2.jpg" />
 	</section>
 	<section class="section7">
 		<img src="images/index/7-1.jpg" />
-		<div class="content font1">
-			<div class="animated my-color1" data-my-animate="fadeInLeft">雇主品牌</div>
-			<div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft">以卓越致敬初心</div>
+		<div class="content font1 wow fadeInLeft">
+			<div class="animated my-color1">雇主品牌</div>
+			<div class="animated ani-time2 my-color2">以卓越致敬初心</div>
 		</div>
 	</section>
 
