--- a/m/product.html
+++ b/m/product.html
@@ -103,7 +103,7 @@
 	</section>
 	<section class="section2">
 		<img src="images/product/2-1.jpg" />
-		<div class="content1">
+		<div class="content1 wow fadeInLeft">
 			<div class="title my-color2 my-font5">乘用车座椅</div>
 			<div class="text my-color1 my-font2">出色的人机工程设计，将人、科技、艺术与座椅完美结合，
 				带来舒适的驾乘体验。</div>
@@ -112,7 +112,7 @@
 	</section>
 	<section class="section3">
 		<img src="images/product/3-1.jpg" />
-		<div class="content1">
+		<div class="content1 wow fadeInLeft">
 			<div class="title my-color5 my-font5">商用车座椅</div>
 			<div class="text my-color1 my-font2">安全可靠的性能，缓解不同环境和不同路况带来的疲劳，助您操控自如。</div>
 		</div>
@@ -120,7 +120,7 @@
 	</section>
 	<section class="section4">
 		<img src="images/product/4-1.jpg" />
-		<div class="content">
+		<div class="content wow fadeInUp100">
 			<div class="title my-color2 my-font5">骨架与零部件</div>
 			<div class="text my-color1 my-font2 my-bg-color5">通过运行先进材料和先进工艺，达到产品性能提升，实现模块化和平台化
 				策略，提升产品轻量化，致力超越客户多样化的需求。</div>
@@ -128,7 +128,7 @@
 	</section>
 	<section class="section5">
 		<img src="images/product/5-1.jpg" />
-		<div class="content">
+		<div class="content wow fadeInUp100">
 			<div class="title my-color2 my-font5">面套</div>
 			<div class="text my-color1 my-font2 my-bg-color5">从面料的设计，到面料的后处理精致工艺及领先的放版、
 				裁剪、缝制技术，使座椅呈现高品质的外观，为创意设计和凸显个性化提供更大的自由度。</div>
@@ -136,7 +136,7 @@
 	</section>
 	<section class="section6">
 		<img src="images/product/6-1.jpg" />
-		<div class="content">
+		<div class="content wow fadeInUp100">
 			<div class="title my-color5 my-font5">泡沫</div>
 			<div class="text my-color1 my-font2 my-bg-color5">独有的配方经验，和领先的制造技术，能使产品在不同区域和不同层次表现出不同
 				的软硬度，带给驾乘者短期和长期舒适性能。</div>
