--- a/m/profession.html
+++ b/m/profession.html
@@ -255,7 +255,7 @@
 	
 	<section class="section1">
 		<img src="images/profession/1-1.jpg" />
-		<div class="content my-bg-color5">
+		<div class="content my-bg-color5 wow fadeInUp">
 			<div class="cont1 my-color2 my-font5">雇主品牌</div>
 			<div class="cont2 my-color2 my-font6">志存高远<span>|</span>永不止步<span>|</span>凝心聚力</div>
 			<div class="cont3 my-color1">
@@ -272,7 +272,7 @@
 	</section>
 	<section class="section2">
 		<img src="images/profession/2-1.jpg" />
-		<div class="content my-color1">
+		<div class="content my-color1 wow fadeInDown">
 			<div class="cont1 my-color2 my-font5"><span>面向校园</span>及社会招聘</div>
 			<div class="cont2 my-color2 my-font6">这是一个追求卓越的组织；</div>
 			<div class="cont3">每一个加入这里的人，都是有信念，有态度，有追求的人，我们志同道合，不忘初心；</div>
@@ -282,7 +282,7 @@
 	</section>
 	<section class="section3">
 		<img src="images/profession/3-1.jpg" />
-		<div class="content content-box my-color1">
+		<div class="content content-box my-color1 wow fadeInLeft">
 			<div class="cont1 my-font4">
 				<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/campus">
 					<span class="my-bg-color2 my-color1">校园招聘</span>
@@ -298,7 +298,7 @@
 	</section>
 	<section class="section4">
 		<img src="images/profession/4-1.jpg" />
-		<div class="content content-box my-color1">
+		<div class="content content-box my-color1 wow fadeInRight">
 			<div class="cont1 my-font4">
 				<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/social">
 					<span class="my-bg-color2 my-color1">社会招聘</span>
@@ -314,7 +314,7 @@
 	</section>
 	<section class="section5">
 		<img src="images/profession/5-1.jpg" />
-		<div class="content">
+		<div class="content wow fadeInRight">
 			<div class="title my-bg-color7 my-color2 my-font5">员工发展</div>
 			<div class="cont-box my-bg-color8">
 				<div class="cont1 my-color5 my-font6">打造一个没有天花板的舞台</div>
@@ -326,7 +326,7 @@
 		</div>
 	</section>
 	<section class="section6">
-		<div class="content1">
+		<div class="content1 wow fadeInLeft">
 			<div class="cont1 my-color5 my-font6">学习与发展原则</div>
 			<div class="cont2">员工发展的表现来源于个人在职业生涯中的改变、适应以及成长能力。
 				重庆延锋安道拓注重实时地在现实生活中学习的价值，从而使个人能满足充满挑战和变化的工作要求。
@@ -357,7 +357,7 @@
 	<section class="section7">
 		<img src="images/profession/7-1.jpg" />
 		<div class="content my-color1">
-			<div class="content1">
+			<div class="content1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color2">多样化学习资源</div>
 				<div class="cont2">在三个基本原则的指导下，公司对员工的学习发展体系建设中也遵循10-20-70的发展原则，
 					让培养与发展的资源更有助于转化为员工的能力。</div>
@@ -365,13 +365,13 @@
 					<span class="my-bg-color2"></span>
 				</div>
 			</div>
-			<div class="content2">
+			<div class="content2 wow fadeInUp ani-time2">
 				<img src="images/profession/icon7-1.png">
 				<!-- <div class="cont-text cont-text1">课程培训/Workshop/E-learning/在职学历教育</div>
 				<div class="cont-text cont-text2">一对一辅导/360度评估反馈/导师机制</div>
 				<div class="cont-text cont-text3">岗位锻炼 授权/转换职能/负责新业务等</div> -->
 			</div>
-			<div class="content3 my-font3">
+			<div class="content3 my-font3 wow fadeInUp ani-time2">
 				<div class="item-box">
 					<img src="images/profession/icon7-2.png">
 					<div class="cont-text">200+ 面授课程</div>
@@ -390,10 +390,10 @@
 	<section class="section8">
 		<img src="images/profession/8-1.jpg" />
 		<div class="content">
-			<div class="content1">
+			<div class="content1 wow fadeInUp ani-time2">
 				<img src="images/profession/icon8-1.png" />
 			</div>
-			<div class="content2">
+			<div class="content2 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color5">员工发展通路</div>
 				<div class="cont2">在重庆延锋安道拓，员工的职业发展主要通过三条通路实现：
 					管理通路、专业通路和轮岗通路。</div>
@@ -405,18 +405,18 @@
 	<section class="section9">
 		<img src="images/profession/9-1.jpg" />
 		<div class="content content-box">
-			<div class="content1">
+			<div class="content1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color5">CQYFAS领导力学院</div>
 				<div class="cont2">CQYFAS领导力学院培养训练有素的管理者及后备梯队人才。
 					在这里我们传承和打造CQYFAS的管理文化，旨在为每一位管理者或有潜力成为管理者的员工提供领导力成长的有序路径。
 				</div>
 			</div>
-			<div class="content2">
+			<div class="content2 wow fadeInUp ani-time2">
 				<img src="images/profession/9-2.jpg">
 				<div class="block1"></div>
 				<div class="block2"></div>
 			</div>
-			<div class="content3">
+			<div class="content3 wow fadeInUp ani-time2">
 				<img src="images/profession/9-3.png">
 			</div>
 		</div>
@@ -424,14 +424,14 @@
 	<section class="section10">
 		<img src="images/profession/10-1.jpg" />
 		<div class="content content-box">
-			<div class="content1 my-color1">
+			<div class="content1 my-color1 wow fadeInUp ani-time2">
 				<div class="cont1 my-font6 my-color2">CQYFAS专业学院</div>
 				<div class="cont2">重庆延锋安道拓专业学院于2015年成立，旨在系统化的提升员工的专业能力，
 					在建立技术人才梯队的同时，激励和发挥高级专业人才的带头引领作用。
 				</div>
 				<div class="cont3">目前设13大专业学院：</div>
 			</div>
-			<div class="content2 my-color5 my-font3">
+			<div class="content2 my-color5 my-font3 wow fadeInUp ani-time2">
 				<div class="item-box">
 					<img class="bg1" src="images/profession/bg1.png">
 					<div class="content-box">
