--- a/m/technology.html
+++ b/m/technology.html
@@ -201,14 +201,14 @@
 	<section class="section1">
 		<img src="images/technology/1-1.jpg" />
 		<img class="content1" src="images/technology/1-2.png">
-		<div class="content2 my-color1 my-font5">创新研发</div>
-		<div class="content3">
+		<div class="content2 my-color1 my-font5 wow fadeInRight">创新研发</div>
+		<div class="content3 wow fadeInRight">
 			<div class="text1 my-color1">超级座椅</div>
 			<div class="text2 my-color2">面向未来的座椅</div>
 		</div>
 	</section>
 	<section class="section2">
-		<div class="text my-color5 my-font2">
+		<div class="text my-color5 my-font2 wow fadeInUp">
 			<div>Super seat是重庆延锋安道拓自主研发的一款多功能高端汽车商务座椅 。</div>
 			<div>我们从用户需求出发 ，还原不同座舱场景 ，满足座舱休闲娱乐 、商务办公等多种需求 ，
 					带你感受智能 、便捷 、舒适的座椅新体验 。</div>
@@ -221,7 +221,7 @@
 		</a>
 		<div class="content3">
 			<img src="images/technology/2-2.jpg" alt="">
-			<div class="cont-box content-box my-font1 my-color1">
+			<div class="cont-box content-box my-font1 my-color1 wow fadeInLeft">
 				<div class="cont"><span>科技感十足的外观设计</span></div>
 				<div class="cont"><span>流畅的智能APP控制</span></div>
 				<div class="cont"><span>便捷的手机无线充电</span></div>
@@ -229,33 +229,33 @@
 		</div>
 	</section>
 	<section class="section3">
-		<div class="content1">
+		<div class="content1 wow fadeInDown">
 			<div class="title my-font5 my-color5">五大智能模块</div>
 			<img class="icon1" src="images/icons/icon1.jpg" />
 		</div>
 		<div class="content2">
 			<div class="cont-box"><img src="images/technology/3-1.jpg" /></div>
-			<div class="cont-box text-box my-bg-color2">
+			<div class="cont-box text-box my-bg-color2 wow fadeInRight">
 				<div class="cont1 my-color5 my-font1">迎宾模块</div>
 				<div class="cont2">当车门打开时，自动旋转45°，调整方便进出的方向。</div>
 			</div>
-			<div class="cont-box text-box my-bg-color7">
+			<div class="cont-box text-box my-bg-color7 wow fadeInLeft">
 				<div class="cont1 my-color2 my-font1">多方位调节</div>
 				<div class="cont2">多向调节及座椅记忆功能，可实现45°及180°的双角度灵活旋转，在车内快速调节舒适位置。</div>
 			</div>
 			<div class="cont-box"><img src="images/technology/3-2.jpg" /></div>
 			<div class="cont-box"><img src="images/technology/3-3.jpg" /></div>
-			<div class="cont-box text-box my-bg-color2">
+			<div class="cont-box text-box my-bg-color2 wow fadeInRight">
 				<div class="cont1 my-color5 my-font1">舒适模块</div>
 				<div class="cont2">搭载按摩、腰托、腿托、通风，根据身体情况自由调节，打造极致舒适。</div>
 			</div>
-			<div class="cont-box text-box my-bg-color7">
+			<div class="cont-box text-box my-bg-color7 wow fadeInLeft">
 				<div class="cont1 my-color2 my-font1">储物模块</div>
 				<div class="cont2">多项巧妙的储物设计，充满惊喜，为你的娱乐与办公提供更大的支持。</div>
 			</div>
 			<div class="cont-box"><img src="images/technology/3-4.jpg" /></div>
 			<div class="cont-box"><img src="images/technology/3-5.jpg" /></div>
-			<div class="cont-box text-box my-bg-color2">
+			<div class="cont-box text-box my-bg-color2 wow fadeInRight">
 				<div class="cont1 my-color5 my-font1">空气净化</div>
 				<div class="cont2">靠背安装空气净化器，实时监测车内空气，自动完成空气净化，在车内呼吸新鲜空气。</div>
 			</div>
@@ -263,7 +263,7 @@
 	</section>
 	<section class="section4">
 		<img src="images/technology/4-1.jpg" />
-		<div class="content-box">
+		<div class="content-box wow fadeInDown">
 			<div class="cont1 my-font5 my-color2"><span>技术</span>中心</div>
 			<div class="cont2 my-color1">
 				<span>>200+名工程师</span>
@@ -363,44 +363,44 @@
 	</section>
 	<section class="section6">
 		<div class="content1 my-color5">
-			<div class="cont1 my-font5"><span>制造</span>能力</div>
-			<div class="cont2 my-font4">我们拥有</div>
-			<div class="cont3 my-font6">从汽车座椅零部件到整椅的各部分的生产制造能力</div>
+			<div class="cont1 my-font5 wow fadeInLeft"><span>制造</span>能力</div>
+			<div class="cont2 my-font4 wow fadeInLeft ani-time2">我们拥有</div>
+			<div class="cont3 my-font6 wow fadeInLeft ani-time2">从汽车座椅零部件到整椅的各部分的生产制造能力</div>
 		</div>
 		<div class="content2">
 			<img src="images/technology/6-a.jpg" />
 			<div class="content-box">
 				<div class="item-box">
 					<img src="images/technology/6-1.jpg">
-					<div class="content-box box1">浇注（泡沫）</div>
+					<div class="content-box box1 wow fadeInUp ani-time2">激光焊接</div>
 				</div>
 				<div class="item-box">
 					<img src="images/technology/6-2.jpg">
-					<div class="content-box box1">自动裁剪</div>
+					<div class="content-box box1 wow fadeInUp ani-time2">连续模</div>
 				</div>
 				<div class="item-box">
 					<img src="images/technology/6-3.jpg">
-					<div class="content-box box1">自动拧紧</div>
+					<div class="content-box box1 wow fadeInUp ani-time2">浇注（泡沫）</div>
 				</div>
 				<div class="item-box">
 					<img src="images/technology/6-4.jpg">
-					<div class="content-box box1">工厂信息化</div>
+					<div class="content-box box1 wow fadeInUp ani-time2">自动裁剪</div>
 				</div>
 				<div class="item-box">
 					<img src="images/technology/6-5.jpg">
-					<div class="content-box box1">激光焊接</div>
+					<div class="content-box box1 wow fadeInUp ani-time2">冲压串联线</div>
 				</div>
 				<div class="item-box">
 					<img src="images/technology/6-6.jpg">
-					<div class="content-box box1">连续模</div>
+					<div class="content-box box1 wow fadeInUp ani-time2">滑轨在线检测</div>
 				</div>
 				<div class="item-box">
 					<img src="images/technology/6-7.jpg">
-					<div class="content-box box1">冲压串联线</div>
+					<div class="content-box box1 wow fadeInUp ani-time2">自动拧紧</div>
 				</div>
 				<div class="item-box">
 					<img src="images/technology/6-8.jpg">
-					<div class="content-box box1">滑轨在线检测</div>
+					<div class="content-box box1 wow fadeInUp ani-time2">工厂信息化</div>
 				</div>
 			</div>
 		</div>
@@ -421,7 +421,7 @@
 <script src="js/jquery.fancybox.js"></script>
 <script src="js/appear.js"></script>
 <script src="js/owl.js"></script>
-<script src="js/animated.js"></script>
+<script src="js/wow.js"></script>
 
 <script src="js/slick.js"></script>
 <script src="js/jquery-ui.js"></script>
