--- a/m/culture.html
+++ b/m/culture.html
@@ -213,7 +213,7 @@
 	
 	<section class="section1">
 		<img src="images/culture/1-1.jpg" />
-		<div class="content font1">
+		<div class="content font1 wow fadeInRight">
 			<div class="my-color1">幸福</div>
 			<strong class="my-color2">是奋斗出来的</strong>
 		</div>
@@ -221,16 +221,16 @@
 	<section class="section2">
 		<img src="images/culture/2-1.jpg" />
 		<div class="content content-box my-color1">
-			<div class="content1"><strong class="my-font4">幸福家文化</strong><span class="split">/</span><span>土壤</span></div>
+			<div class="content1 wow fadeInDown"><strong class="my-font4">幸福家文化</strong><span class="split">/</span><span>土壤</span></div>
 			<div class="content2 my-all-center"><img class="" src="images/culture/icon1.png" /></div>
-			<div class="content3"><span>同创共享的</span><strong class="my-font4">奋斗者文化</strong><span class="split">/</span><span>根基</span></div>
+			<div class="content3 wow fadeInUp"><span>同创共享的</span><strong class="my-font4">奋斗者文化</strong><span class="split">/</span><span>根基</span></div>
 		</div>
 	</section>
 	<section class="section3 my-color1">
 		<div class="title my-bg-color7 my-font5">文化项目</div>
 		<div class="content content1">
 			<img src="images/culture/3-1.jpg" />
-			<div class="cont-box my-bg-color9">
+			<div class="cont-box my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">春节联欢晚会</div>
 				<div class="cont2">在CQYFAS，春节联欢晚会是一年一度最隆重的盛会。那是一个属于“艾小渝”自己的舞台，每年春晚主题都应景走心，
 						所有节目都是重庆延锋安道拓人根据时下流行的元素自编自导共同出品，齐心打造的视听盛宴。</div>
@@ -238,7 +238,7 @@
 		</div>
 		<div class="content content2">
 			<img src="images/culture/3-2.jpg" />
-			<div class="cont-box my-bg-color9">
+			<div class="cont-box my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">家属日</div>
 				<div class="cont2">我们在每年的11月1日通过举办特色活动的形式邀请员工家属参与其中，从而感受延锋安道拓一直倡导的幸福家文化，为此我们称之为“家属日”。
 						从传统观念来看，（1+1）+1代表，其中1+1代表一个家庭的两位主体成员，剩下的1位代表孩子。因此我们将每年11月1日确定为家属日。</div>
@@ -246,7 +246,7 @@
 		</div>
 		<div class="content content3">
 			<img src="images/culture/3-3.jpg" />
-			<div class="cont-box my-bg-color9">
+			<div class="cont-box my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">星耀盛典</div>
 				<div class="cont2">从2015年开始，重庆延锋安道拓开始举办独立的年度奖项颁奖典礼。
 						我们鼓励个人、团队积极推选符合奖项的 候选人，号召艾小渝们不断探索真知、追求卓越。</div>
@@ -254,7 +254,7 @@
 		</div>
 		<div class="content content4">
 			<img src="images/culture/3-4.jpg" />
-			<div class="cont-box my-bg-color9">
+			<div class="cont-box my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">团队集会</div>
 				<div class="cont2">自1996年开始，CQYFAS各工厂由员工组成团队参赛，在团队集会的舞台上通过表演、舞蹈等多种形式展示公司最新的持续改进结果。
 						该活动每年7月在重庆延锋安道拓各工厂内部比赛，下半年则举行中国区和亚太区比赛。</div>
@@ -262,11 +262,11 @@
 		</div>
 	</section>
 	<section class="section4 my-bg-color7">
-		<div class="title my-color1 my-font5">文化的力量</div>
+		<div class="title my-color1 my-font5 wow fadeInDown">文化的力量</div>
 		<div class="content">
 			<a href="video/whll.mp4" class="lightbox-image play-box">
 				<img src="images/culture/4-1.jpg">
-				<div class="text my-color2">此片献给正在为梦想而奋斗的您</div>
+				<div class="text my-color2 wow fadeInUp ani-time">此片献给正在为梦想而奋斗的您</div>
 				<img class="my-all-center icon-play" src="images/icons/play.png">
 			</a>
 		</div>
@@ -274,9 +274,9 @@
 	<section class="section5">
 		<img src="images/culture/5-1.jpg" />
 		<div class="content my-color1 my-font3 my-bg-color9">
-			<div class="cont1 my-font7">做企业<strong class="my-color2">就是做文化</strong></div>
-			<div class="cont2"><img src="images/culture/5-2.jpg" /></div>
-			<div class="cont3">
+			<div class="cont1 my-font7 wow fadeInUp ani-time2">做企业<strong class="my-color2">就是做文化</strong></div>
+			<div class="cont2 wow fadeInUp ani-time3"><img src="images/culture/5-2.jpg" /></div>
+			<div class="cont3 wow fadeInUp ani-time2">
 				<div>《文化的力量》献给亲爱的伙伴,学习传承,奔向未来;</div>
 				<div>《文化的力量》献给出色的同行,交流分享,一路向前;</div>
 				<div>《文化的力量》献给尊敬的朋友,投砾引珠,广征博引;</div>
@@ -300,10 +300,10 @@
 	<section class="section6">
 		<img src="images/culture/6-1.jpg" />
 		<div class="content content-box">
-			<div class="content1">
+			<div class="content1 wow fadeInUp ani-time3">
 				<img src="images/culture/icon2.png" />
 			</div>
-			<div class="content2 my-color1">
+			<div class="content2 my-color1 wow fadeInUp">
 				<div class="cont1 my-font5">社会责任</div>
 				<div class="cont2 my-font3">在重庆延锋安道拓（CQYFAS）,我们对成功的定义并不仅限于财务成功，
 						我们更加关怀环境保护和社会责任。因此，基于环保、社区责任和员工领导力三重底线的蓝天计划应运而生。</div>
@@ -314,7 +314,7 @@
 		<div class="content1 my-font3">
 			<div class="cont-box1 my-color1">
 				<img src="images/culture/7-1.jpg" />
-				<div class="content content-box">
+				<div class="content content-box wow fadeInUp">
 					<div class="title my-font6 my-color2">蓝天基金</div>
 					<div class="text">公司于2014年正式成立了蓝天基金，并首次在当年春晚为蓝天基金注入131400元。
 							蓝天基金将用于支撑每年度的蓝天计划，为蓝天计划各项活动提供资金支持，以及帮扶企业内部困难职工。
@@ -322,21 +322,21 @@
 				</div>
 			</div>
 			<div class="cont-box2 my-color1 my-bg-color7">
-				<div class="box1">
+				<div class="box1 wow fadeInUp">
 					<div class="title my-font6 my-color2">蓝天计划</div>
 					<div class="text">蓝天计划是一项全球性员工激励计划，旨在鼓励重庆延锋安道拓员工组成志愿者小组，
 							与当地公益性组织或学校合作以支持环境的可持续发展，社会服务，教育事业，公司员工组成3至100人
 							不等的志愿者项目团队，并与其选定的公益性组织或学校开展志愿者项目。</div>
 				</div>
-				<div class="box2">
+				<div class="box2 wow fadeInUp">
 					<div class="title my-font1 my-color2">开展蓝天计划的意义</div>
 					<div class="text">当地社区受益于志愿者的参与，我们也能从不断提高的领导经验和员工团队建设中
 							获益匪浅。重庆延锋安道拓的社会责任项目表面公司对于实现最高标准绩效、团队合作、包容性、领导力及成长的承诺。
 							公司支持员工加入全球的自愿行动，并且珍视员工为社区所做的重要贡献。</div>
 				</div>
-				<img class="box3" src="images/culture/icon3.png" />
+				<img class="box3 wow fadeInUp" src="images/culture/icon3.png" />
 			</div>
-			<div class="cont-box3">
+			<div class="cont-box3 wow fadeInDown">
 				<div class="title my-font1 my-color5">系列特色蓝天计划活动</div>
 				<div class="text">重庆延锋安道拓一直持续不断践行蓝天计划，历年也沉淀下不少精品蓝天计划项目。</div>
 			</div>
@@ -344,7 +344,7 @@
 		</div>
 		<div class="content2 item-box">
 			<img src="images/culture/7-2.jpg" />
-			<div class="content my-bg-color9">
+			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">大学生领导力挑战赛</div>
 				<div class="cont2">蓝天计划将学校作为目标社区开展以环保、大学生领导力为主题的系列校园活动。
 						通过一系列高质量、高要求的团队挑战，锻炼当代大学生的领导能力、培养社会责任意识、宣传环保理念。</div>
@@ -352,7 +352,7 @@
 		</div>
 		<div class="content3 item-box">
 			<img src="images/culture/7-3.jpg" />
-			<div class="content my-bg-color9">
+			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">校企开放日</div>
 				<div class="cont2">我们邀请“大学生领导力挑战赛”获胜的所有队伍前往重庆延锋安道拓，
 						展示其获奖作品，参观公司及本地工厂，进行深入的校企参访交流。</div>
@@ -360,7 +360,7 @@
 		</div>
 		<div class="content4 item-box">
 			<img src="images/culture/7-4.jpg" />
-			<div class="content my-bg-color9">
+			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">为爱奔跑</div>
 				<div class="cont2">“为爱奔跑”8 小时接力公益赛起源于2014 年，是一次用“公益、自助、环保”贯穿前期训练、活动筹备、比赛全程的赛事。
 						本次活动秉承着自愿捐赠的原则，最终您的每一步，公司捐助的每一笔赞助金，我们都将用于后期资助学校的修建和贫困小孩的帮扶等爱心活动。</div>
@@ -368,7 +368,7 @@
 		</div>
 		<div class="content5 item-box">
 			<img src="images/culture/7-5.jpg" />
-			<div class="content my-bg-color9">
+			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">酉阳二中关爱助学</div>
 				<div class="cont2">杉树公益联合重庆延锋安道拓蓝天基金在重庆酉阳二中共同设立“杉树班”。2017年起延锋安道拓每年组建30人志愿者队伍，
 						为80位“双特”（特别贫困、特别优秀）生进行一对一帮扶，并为每位学生募捐三年生活费9000元，共计募捐72万元。</div>
@@ -376,7 +376,7 @@
 		</div>
 		<div class="content6 item-box">
 			<img src="images/culture/7-6.jpg" />
-			<div class="content my-bg-color9">
+			<div class="content my-bg-color9 wow fadeInUp ani-time2">
 				<div class="cont1 my-font1">工厂蓝天计划</div>
 				<div class="cont2">每年重庆延锋安道拓各分子公司均自行组织志愿者参与蓝天计划，积极投身于社会环保、助学帮扶等公益项目中。</div>
 			</div>
@@ -384,7 +384,7 @@
 	</section>
 	<section class="section8">
 		<div class="title my-bg-color7 my-font5 my-color1">杂志《认知》</div>
-		<div class="content">
+		<div class="content  wow fadeInUp">
 			<div class="item-box isClick" data-url="file/79.pdf"><img src="images/culture/8-1.jpg" /></div>
 			<div class="item-box isClick" data-url="file/80.pdf"><img src="images/culture/8-2.jpg" /></div>
 			<div class="item-box isClick" data-url="file/83.pdf"><img src="images/culture/8-3.jpg" /></div>
