--- a/news-detail-en.html
+++ b/news-detail-en.html
@@ -75,7 +75,7 @@
 <!--End Main Header -->
 <div class="page-wrapper" id="index">
 	
- 	
+    <div class="go-top"><img src="images/icons/go-top.png" /></div>
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
@@ -127,6 +127,7 @@
 <!--End Master Slider -->
 
 <script src="js/script.js"></script>
+<script src="my-js/news.js"></script>
 <script type="text/javascript">
     $('.back-btn').click(function(){
         window.location.href = 'news.html'
