--- a/news-en.html
+++ b/news-en.html
@@ -102,7 +102,7 @@
 <!--End Main Header -->
 <div class="page-wrapper" id="index">
 	
- 	
+    <div class="go-top"><img src="images/icons/go-top.png" /></div>
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
@@ -230,6 +230,7 @@
 <!--End Master Slider -->
 
 <script src="js/script.js"></script>
+<script src="my-js/news.js"></script>
 <script type="text/javascript">
     $('.news-list .item-box').click(function(){
         window.location.href = 'news-detail.html';
