--- a/product-en.html
+++ b/product-en.html
@@ -42,12 +42,16 @@
 .slide4 .box2{
 	flex-direction: column;
 }
+.slide4 .box3{
+	display: block !important;
+}
 .slide-cloumn3 .box1 .content,
 .slide-cloumn3 .box2 .content{
 	height: 50%;
 	display: flex;
 	align-items: center;
 }
+
 .slide-cloumn3 .cont-text{
 	padding: 20px;
 }
@@ -59,14 +63,52 @@
 .cont2{
 	font-size: 16px;
 }
-.slide2 .content,
-.slide3 .content{
-	width: 30%;
+.slide2 .column-box,
+.slide3 .column-box{
+	display: flex;
+	height: 100%;
 }
-.slide2 .content>div,
-.slide3 .content>div
-{
-	text-align: left;
+.slide2 .column-box .item-box,
+.slide3 .column-box .item-box{
+	position: relative;
+}
+.slide2 .cont-box,
+.slide3 .cont-box{
+	padding: 0 10% 0 7%;
+}
+.slide2 .column-box .box1{
+	width: 67%;
+}
+.slide2 .column-box .box2{
+	width: 33%;
+}
+.slide2 .column-box .content{
+	position:absolute;
+	width: 50%;
+    left: 50%;
+    top: 0;
+    height: 100%;
+}
+.slide3 .column-box .box1{
+	width: 33%;
+}
+.slide3 .column-box .box2{
+	width: 67%;
+}
+.slide3 .column-box .content{
+	position:absolute;
+	width: 50%;
+    left: 0;
+    top: 0;
+    height: 100%;
+}
+.slide5 .box3 .content{
+	height: 50%;
+	display: flex;
+	align-items: center;
+}
+.slide5 .item-box{
+	flex-direction: column;
 }
 </style>
 </head>
@@ -78,7 +120,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="product">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png" /></div> 	
     <!-- Preloader -->
     <div class="preloader"></div>
 	<div id="index-swiper" class="swiper-container my-color1">
@@ -87,46 +129,107 @@
 			<div class="swiper-slide slide1 slide-zy">
 				<img class="slide-bg" src="images/background/bg-2-2.jpg">
 				<div class="content">
-					<img class="zy-img" src="images/index/3.png">
+					<!-- <img class="zy-img" src="images/index/3.png">
 					<div class="content-box">
 						<div class="point point1">
-							<div class="point-text">Complete seat</div>
+							<div class="point-text">整椅</div>
 							<img src="images/icons/point.png">
 						</div>
 						<div class="point point2">
-							<div class="point-text">Trim</div>
+							<div class="point-text">面套</div>
 							<img src="images/icons/point.png">
 						</div>
 						<div class="point point3">
-								<div class="point-text">Frame</div>
+								<div class="point-text">骨架</div>
 							<img src="images/icons/point.png">
 							
 						</div>
 						<div class="point point4">
-								<div class="point-text">Foam</div>
+								<div class="point-text">泡沫</div>
 							<img src="images/icons/point.png">
 							
+						</div>
+					</div> -->
+					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
+					<div class="content-box">
+						<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
+							<div class="point-text">整椅</div>
+							<img src="images/icons/point.png">
+							<div class="line">
+								<span class="small-point"></span>
+								<span>></span>
+							</div>
+						</div>
+						<div class="point point2 animated ani-time3" data-my-animate="fadeInLeft">
+							<div class="point-text">面套</div>
+							<img src="images/icons/point.png">
+							<div class="line">
+									<span class="small-point"></span>
+									<span>></span>
+								</div>
+						</div>
+						<div class="point point3 animated ani-time3" data-my-animate="fadeInRight">
+							<div class="line">
+								<span><</span>
+								<span class="small-point"></span>
+							</div>
+							<img src="images/icons/point.png">
+							<div class="point-text">骨架</div>
+						</div>
+						<div class="point point4 animated ani-time2" data-my-animate="fadeInRight">
+							<div class="line">
+								<span><</span>
+								<span class="small-point"></span>
+							</div>
+							<img src="images/icons/point.png">
+							<div class="point-text">泡沫</div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<!--第2屏-->
 			<div class="swiper-slide slide2">
-				<img class="slide-bg" src="images/product/2-1.jpg">
-				<div class="content-box animated" data-my-animate="fadeInLeft">
-					<div class="content text-center">
-						<div class="cont1 my-color2">Passenger Car Seat</div>
-						<div class="cont2 my-color1">Excellent ergonomic design with perfect integration of people, technology, art and seats provides comfortable driving experience.</div>
+				<div class="column-box">
+					<div class="item-box box1">
+						<img class="slide-bg" src="images/product/2-1.jpg">
+						<div class="content my-bg-color5 animated" data-my-animate="fadeInLeft" >
+							<div class="my-column-center cont-box">
+								<div class="cont1 my-color2">乘用车座椅</div>
+								<div class="cont2 my-color1">出色的人机工程设计，将人、科技、艺术与座椅完美结合，
+									带来舒适的驾乘体验。
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item-box box2">
+						<img class="slide-bg" src="images/product/2-2.jpg">
+						<div class="content"></div>
 					</div>
 				</div>
 			</div>
 			<!--第3屏-->
 			<div class="swiper-slide slide3">
-				<img class="slide-bg" src="images/product/3-1.jpg">
+				<!-- <img class="slide-bg" src="images/product/3-1.jpg">
 				<div class="content-box animated" data-my-animate="fadeInLeft">
 					<div class="content text-center">
-						<div class="cont1 my-color2">Commercial Car Seat</div>
-						<div class="cont2 my-color1">Safe and reliable performance alleviates the fatigue caused by different environments and traffic and improves steerability.
+						<div class="cont1 my-color2">商用车座椅</div>
+						<div class="cont2 my-color1">安全可靠的性能，缓解不同环境和不同路况带来的疲劳，助您操控自如。
+						</div>
+					</div>
+				</div> -->
+				<div class="column-box">
+					<div class="item-box box1">
+						<img class="slide-bg" src="images/product/3-1.jpg">
+						<div class="content"></div>
+					</div>
+					<div class="item-box box2">
+						<img class="slide-bg" src="images/product/3-2.jpg">
+						<div class="content my-bg-color5 animated" data-my-animate="fadeInRight" >
+							<div class="my-column-center cont-box">
+								<div class="cont1 my-color2">商用车座椅</div>
+								<div class="cont2 my-color1">安全可靠的性能，缓解不同环境和不同路况带来的疲劳，助您操控自如。
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -136,26 +239,21 @@
 				<div class="column-box">
 					<div class="item-box box1 animated" data-my-animate="fadeInLeft">
 						<img class="content content1" src="images/product/4-1.jpg">
-						<div class="content content2 my-bg-color2">
-							<div class="cont-text animated ani-time2" data-my-animate="fadeInLeft">
-								<div class="cont1 my-color3">Trim</div>
-								<div class="cont2 my-color1">Our trim cover design in early stage and post-processing craftsmanship and the leading techniques of pattern design, cutting and sewing at large presents high-quality appearance and provides more flexibility for creative and individualized design.
-								</div>
-							</div>
-						</div>
+						<img class="content content2" src="images/product/4-2.jpg">
 					</div>
 					<div class="item-box box2 animated" data-my-animate="fadeInDown100">
 						<div class="content content1 animated ani-time2" data-my-animate="fadeInDown100">
 							<div class="cont-text">
-									<div class="cont1 my-color3">Frame</div>
-									<div class="cont2 my-color4">Higher performance, stronger materials, wider functions and lighter material meet customers’ diverse needs.
+									<div class="cont1 my-color3">骨架与零部件</div>
+									<div class="cont2 my-color4">通过运行先进材料和先进工艺，达到产品性能提升，实现模块化和平台化
+										策略，提升产品轻量化，致力超越客户多样化的需求。
 									</div>
 							</div>
 						</div>
-						<img class="content content2" src="images/product/4-2.jpg">
+						<img class="content content2" src="images/product/4-3.jpg">
 					</div>
 					<div class="item-box box3 animated" data-my-animate="fadeInRight">
-						<img src="images/product/4-3.jpg">
+						<img src="images/product/4-4.jpg">
 					</div>
 				</div>
 			</div>
@@ -164,19 +262,29 @@
 				<div class="column-box">
 					<div class="item-box box1 animated" data-my-animate="fadeInLeft">
 						<img class="content content1" src="images/product/5-1.jpg">
-						<div class="content content2">
+						<img class="content content2" src="images/product/5-2.jpg">
+					</div>
+					<div class="item-box box2 animated" data-my-animate="fadeInDown100">
+						<div class="content content1 my-bg-color2">
 							<div class="cont-text animated ani-time2" data-my-animate="fadeInLeft">
-								<div class="cont1 my-color3">Foam</div>
-								<div class="cont2 my-color4">Unique formula and leading manufacturing technology enable our products to realize different level of hardness in different parts, thus bringing comfort to the driver.
+								<div class="cont1 my-color3">面套</div>
+								<div class="cont2 my-color1">从面料的设计，到面料的后处理精致工艺及领先的放版、
+									裁剪、缝制技术，使座椅呈现高品质的外观，为创意设计和凸显个性化提供更大的自由度。
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="item-box box2 animated" data-my-animate="fadeInDown100">
-						<img src="images/product/5-2.jpg">
+						<img class="content content2" src="images/product/5-3.jpg">
 					</div>
 					<div class="item-box box3 animated" data-my-animate="fadeInRight">
-						<img src="images/product/5-3.jpg">
+						<img class="content content1" src="images/product/5-4.jpg">
+						<div class="content content2">
+							<div class="cont-text animated ani-time2" data-my-animate="fadeInLeft">
+								<div class="cont1 my-color3">泡沫</div>
+								<div class="cont2 my-color4">独有的配方经验，和领先的制造技术，能使产品在不同区域和不同层次表现出不同
+									的软硬度，带给驾乘者短期和长期舒适性能。
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
